@@ -1,3 +1,15 @@
+2021-07-29  Aakash Jain  <aakash_jain@apple.com>
+
+        [ews] VerifyGitHubIntegrity step fails with an exception
+        https://bugs.webkit.org/show_bug.cgi?id=228587
+
+        Reviewed by Jonathan Bedard.
+
+        * CISupport/ews-build/steps.py:
+        (VerifyGitHubIntegrity): Fixed the base class.
+        (VerifyGitHubIntegrity.getResultSummary): Drive-by fix to improve error message.
+        * CISupport/ews-build/steps_unittest.py: Added unit-tests.
+
 2021-07-29  Michael Catanzaro  <mcatanzaro@gnome.org>
 
         [WPE][GTK] .asc file extension is appended to filename of text/plain downloads
